--- a/index.html
+++ b/index.html
@@ -2438,7 +2438,6 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
     window.map.closePopup(currentInspectionPopup);
     currentInspectionPopup = null;
   }
-
   db.ref(`${layerType}/${gullyId}`).once('value').then(snapshot => {
     const gully = snapshot.val() || {};
     const status = gully.status || 'Unmarked';
@@ -2449,18 +2448,6 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
     const inspector = lastInspection && lastInspection.inspector ? lastInspection.inspector.name : '';
     const timestamp = lastInspection ? lastInspection.timestamp : null;
     const canEdit = (window.currentUserData && window.currentUserData.role === 'admin') || editMode;
-
-    // Use the same comments as the summary descriptions
-    const commentOptions = [
-      'Clear: Gully is clean and functioning properly',
-      'Blocked: Gully is obstructed and needs cleaning',
-      'Broken: Gully is damaged and not functioning',
-      'Remediation: Gully requires maintenance work',
-      'Replacement: Gully needs to be completely replaced',
-      'Expired: Gully needs immediate inspection',
-      'Unmarked: Gully has not been inspected yet'
-    ];
-
     let html = `<div class='inspection-popup popup-form'>`;
     html += `<h3 style='margin-top:0;'>Gully Inspection</h3>`;
     html += `<div><b>ID:</b> ${gullyId}</div>`;
@@ -2486,13 +2473,7 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
     html += `<div><b>Last Inspected:</b> ${timestamp ? new Date(timestamp).toLocaleString() : '-'}</div>`;
     html += `<div><b>Comment:</b><br/>`;
     if (canEdit) {
-      html += `<select id='inspection-comment-dropdown' style='width:100%;margin-bottom:5px;'>`;
-      html += `<option value=''>-- Select a comment --</option>`;
-      commentOptions.forEach(opt => {
-        html += `<option value='${opt.replace(/'/g, "&apos;")}'${comment === opt ? ' selected' : ''}>${opt}</option>`;
-      });
-      html += `</select>`;
-      html += `<input type='text' id='inspection-comment-custom' placeholder='Or enter custom comment' style='width:100%;margin-bottom:5px;' value="${commentOptions.includes(comment) ? '' : (comment || '')}">`;
+      html += `<input type='text' id='inspection-comment-custom' placeholder='Enter comment' style='width:100%;margin-bottom:5px;' value="${comment || ''}">`;
     } else {
       html += `<div style='min-height:2em;'>${comment || '-'}</div>`;
     }
@@ -2504,15 +2485,16 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
     }
     if (canEdit) {
       html += `<input type='file' id='inspection-photo' accept='image/*' style='margin-top:5px;'/><br/>`;
+      html += `<button id='take-photo-btn' type='button' style='margin:5px 0;'>📸 Take Photo</button>`;
       html += `<img id='inspection-photo-preview' style='max-width:100%;max-height:100px;display:none;margin:5px 0;'>`;
+      html += `<div style='margin:5px 0;'><label><input type='checkbox' id='confirm-save-inspection'> Confirm Save Inspection</label></div>`;
     }
     html += `</div>`;
     if (canEdit) {
-      html += `<button id='save-inspection' style='margin-top:8px;'>Save Inspection</button>`;
+      html += `<button id='save-inspection' style='margin-top:8px;' disabled>Save Inspection</button>`;
     }
     html += `<button id='view-history' style='margin-top:8px;'>View History</button>`;
     html += `</div>`;
-
     currentInspectionPopup = L.popup({
       maxWidth: 350,
       closeButton: true,
@@ -2521,22 +2503,8 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
       .setLatLng([latlng.lat, latlng.lng])
       .setContent(html)
       .openOn(window.map);
-
     setTimeout(() => {
       if (canEdit) {
-        // Dropdown and custom comment sync
-        const dropdown = document.getElementById('inspection-comment-dropdown');
-        const customInput = document.getElementById('inspection-comment-custom');
-        dropdown.onchange = function() {
-          if (dropdown.value) {
-            customInput.value = '';
-          }
-        };
-        customInput.oninput = function() {
-          if (customInput.value) {
-            dropdown.value = '';
-          }
-        };
         // Photo preview
         const photoInput = document.getElementById('inspection-photo');
         const photoPreview = document.getElementById('inspection-photo-preview');
@@ -2554,11 +2522,28 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
             }
           };
         }
+        // Take Photo button
+        const takePhotoBtn = document.getElementById('take-photo-btn');
+        if (takePhotoBtn && photoInput) {
+          takePhotoBtn.onclick = function() {
+            photoInput.setAttribute('capture', 'environment');
+            photoInput.click();
+          };
+        }
+        // Confirm Save Inspection checkbox
+        const confirmSave = document.getElementById('confirm-save-inspection');
+        const saveBtn = document.getElementById('save-inspection');
+        if (confirmSave && saveBtn) {
+          confirmSave.onchange = function() {
+            saveBtn.disabled = !confirmSave.checked;
+          };
+          saveBtn.disabled = !confirmSave.checked;
+        }
         document.getElementById('save-inspection').onclick = async function() {
+          if (saveBtn.disabled) return;
           const newStatus = document.getElementById('inspection-status').value;
-          const commentDropdown = document.getElementById('inspection-comment-dropdown');
           const commentCustom = document.getElementById('inspection-comment-custom');
-          const newComment = commentDropdown.value || commentCustom.value;
+          const newComment = commentCustom.value;
           const photoInput = document.getElementById('inspection-photo');
           let newPhotoURL = photoURL;
           if (photoInput && photoInput.files && photoInput.files[0]) {
