--- a/index.html
+++ b/index.html
@@ -2484,14 +2484,16 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
       html += `<img src='${photoURL}' alt='Gully Photo' style='max-width:100%;max-height:100px;margin:5px 0;display:block;'>`;
     }
     if (canEdit) {
-      html += `<input type='file' id='inspection-photo' accept='image/*' style='margin-top:5px;'/><br/>`;
+      html += `<input type='file' id='inspection-photo' accept='image/*' style='margin-top:5px;display:none;'/><br/>`;
       html += `<button id='take-photo-btn' type='button' style='margin:5px 0;'>📸 Take Photo</button>`;
       html += `<img id='inspection-photo-preview' style='max-width:100%;max-height:100px;display:none;margin:5px 0;'>`;
-      html += `<div style='margin:5px 0;'><label><input type='checkbox' id='confirm-save-inspection'> Confirm Save Inspection</label></div>`;
     }
     html += `</div>`;
     if (canEdit) {
-      html += `<button id='save-inspection' style='margin-top:8px;' disabled>Save Inspection</button>`;
+      html += `<div style='margin-top:8px;display:flex;align-items:center;gap:8px;'>`;
+      html += `<input type='checkbox' id='confirm-save-inspection' style='margin-right:4px;'><label for='confirm-save-inspection' style='margin:0;'>Confirm Save Inspection</label>`;
+      html += `<button id='save-inspection' style='margin-left:8px;' disabled>Save Inspection</button>`;
+      html += `</div>`;
     }
     html += `<button id='view-history' style='margin-top:8px;'>View History</button>`;
     html += `</div>`;
@@ -2539,12 +2541,11 @@ function showInspectionPopup(marker, gullyId, latlng, layerType) {
           };
           saveBtn.disabled = !confirmSave.checked;
         }
-        document.getElementById('save-inspection').onclick = async function() {
+        saveBtn.onclick = async function() {
           if (saveBtn.disabled) return;
           const newStatus = document.getElementById('inspection-status').value;
           const commentCustom = document.getElementById('inspection-comment-custom');
           const newComment = commentCustom.value;
-          const photoInput = document.getElementById('inspection-photo');
           let newPhotoURL = photoURL;
           if (photoInput && photoInput.files && photoInput.files[0]) {
             const file = photoInput.files[0];
