--- a/index.html
+++ b/index.html
@@ -366,6 +366,9 @@
       box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
       z-index: 1001;
       transition: transform 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      padding: 0;
     }
     .bottom-toolbar.minimized {
       transform: translateY(calc(100% - 40px));
@@ -400,21 +403,28 @@
       color: #2196F3;
     }
     .toolbar-content {
-      padding: 10px;
+      width: 100%;
       display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
       gap: 10px;
+      padding: 10px 0 10px 0;
       overflow-x: auto;
       -webkit-overflow-scrolling: touch;
+      background: none;
     }
     .button-group {
       display: flex;
-      gap: 5px;
-      padding: 0 10px;
-      border-right: 1px solid #ddd;
+      flex-direction: row;
+      gap: 8px;
+      padding: 0;
+      border: none;
       align-items: center;
+      margin: 0;
     }
-    .button-group:last-child {
-      border-right: none;
+    .button-group.admin-only {
+      margin-right: 16px;
     }
     .toolbar-button {
       padding: 8px 15px;
