--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: center;
+      justify-content: space-evenly;
       gap: 10px;
       padding: 10px 0 10px 0;
       overflow-x: auto;
@@ -424,7 +424,7 @@
       margin: 0;
     }
     .button-group.admin-only {
-      margin-right: 16px;
+      margin-right: 0;
     }
     .toolbar-button {
       padding: 8px 15px;
