--- a/index.html
+++ b/index.html
@@ -2736,34 +2736,34 @@ function loadFromBackup() {
   input.click();
 }
 
-// Forgot password handler
-document.addEventListener('DOMContentLoaded', function() {
-  const forgotLink = document.getElementById('forgotPasswordLink');
-  if (forgotLink) {
-    forgotLink.onclick = function(e) {
-      e.preventDefault();
-      let email = document.getElementById('email').value.trim();
-      if (!email) {
-        email = prompt('Please enter your email address to reset your password:');
-        if (!email) return;
-      }
-      // Validate email format
-      if (!/^\S+@\S+\.\S+$/.test(email)) {
-        document.getElementById('loginError').textContent = '❌ Please enter a valid email address.';
-        return;
-      }
-      firebase.auth().sendPasswordResetEmail(email)
-        .then(() => {
-          document.getElementById('loginError').style.color = 'green';
-          document.getElementById('loginError').textContent = '✔️ Password reset email sent. Please check your inbox.';
-        })
-        .catch(error => {
-          document.getElementById('loginError').style.color = 'red';
-          document.getElementById('loginError').textContent = '❌ ' + (error.message || 'Error sending password reset email.');
-        });
-    };
-  }
-});
+// Forgot password handler (attach directly, not in DOMContentLoaded)
+const forgotLink = document.getElementById('forgotPasswordLink');
+if (forgotLink) {
+  forgotLink.onclick = function(e) {
+    e.preventDefault();
+    let email = document.getElementById('email').value.trim();
+    if (!email) {
+      email = prompt('Please enter your email address to reset your password:');
+      if (!email) return;
+    }
+    // Normalize and validate email
+    const validation = validateAndNormalizeEmail(email);
+    if (!validation.isValid) {
+      document.getElementById('loginError').style.color = 'red';
+      document.getElementById('loginError').textContent = '❌ ' + validation.message;
+      return;
+    }
+    firebase.auth().sendPasswordResetEmail(validation.normalizedEmail)
+      .then(() => {
+        document.getElementById('loginError').style.color = 'green';
+        document.getElementById('loginError').textContent = '✔️ Password reset email sent. Please check your inbox.';
+      })
+      .catch(error => {
+        document.getElementById('loginError').style.color = 'red';
+        document.getElementById('loginError').textContent = '❌ ' + (error.message || 'Error sending password reset email.');
+      });
+  };
+}
 
 </script>
 </body>
