--- a/index.html
+++ b/index.html
@@ -2319,8 +2319,7 @@ function enableAddMode() {
         mapElement.style.cursor = 'crosshair';
         addButton.style.backgroundColor = '#4CAF50';
         addButton.style.color = 'white';
-        alert('Add mode enabled. Click on the map to add new gullies.');
-        
+        alert('Add mode enabled. Click on the map to add new asset.');
         // Add click handler to map
         window.map.on('click', handleMapClick);
     } else {
