--- a/index.html
+++ b/index.html
@@ -1342,8 +1342,52 @@ function getMarkerOptions(status) {
   };
 }
 
+// Define custom icons for each layer
+const layerIcons = {
+  gullies: null, // Use circleMarker for gullies to show status color
+  playgrounds: L.icon({
+    iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
+    iconSize: [25, 41],
+    iconAnchor: [12, 41],
+    popupAnchor: [1, -34],
+    shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+    shadowSize: [41, 41]
+  }),
+  walkways: L.icon({
+    iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
+    iconSize: [25, 41],
+    iconAnchor: [12, 41],
+    popupAnchor: [1, -34],
+    shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+    shadowSize: [41, 41]
+  }),
+  signage: L.icon({
+    iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-yellow.png',
+    iconSize: [25, 41],
+    iconAnchor: [12, 41],
+    popupAnchor: [1, -34],
+    shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+    shadowSize: [41, 41]
+  }),
+  lining: L.icon({
+    iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-black.png',
+    iconSize: [25, 41],
+    iconAnchor: [12, 41],
+    popupAnchor: [1, -34],
+    shadowUrl: 'https://unpkg.com/leaflet@1.9.4/dist/images/marker-shadow.png',
+    shadowSize: [41, 41]
+  })
+};
+
 function addGullyToMap(latlng, gullyId, layerType = 'gullies', status = 'Unmarked') {
-    const marker = L.circleMarker([latlng.lat, latlng.lng], getMarkerOptions(status));
+    let marker;
+    if (layerType === 'gullies') {
+        marker = L.circleMarker([latlng.lat, latlng.lng], getMarkerOptions(status));
+    } else if (layerIcons[layerType]) {
+        marker = L.marker([latlng.lat, latlng.lng], { icon: layerIcons[layerType] });
+    } else {
+        marker = L.marker([latlng.lat, latlng.lng]); // fallback
+    }
     // Add to the correct layer group
     if (window.dataLayers && window.dataLayers[layerType]) {
         window.dataLayers[layerType].addLayer(marker);
@@ -1360,14 +1404,14 @@ function addGullyToMap(latlng, gullyId, layerType = 'gullies', status = 'Unmarke
         }
     });
     marker.on('mouseover', function() {
-        if (deleteMode) {
+        if (deleteMode && layerType === 'gullies') {
             marker.setStyle({ radius: 10 });
         }
     });
     marker.on('mouseout', function() {
-        if (deleteMode) {
+        if (deleteMode && layerType === 'gullies') {
             marker.setStyle({ radius: 8 });
-        } else {
+        } else if (layerType === 'gullies') {
             marker.setStyle({ radius: 6 });
         }
     });
